# django-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  env  env.postgres  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
middleware/: access_log.py  add_slash.py
scripts/: create_superuser.py  run.sh  uvicorn_log_config.yaml  wait_for_db.py
